# silt

./: CLAUDE.md  README.md  RELEASE.txt  pyproject.toml
.claude/skills/execute-issues/: SKILL.md
.claude/skills/generate-issues/: SKILL.md
.claude/skills/release-version/: SKILL.md
.claude/skills/upload-issues/: SKILL.md
.github/workflows/: ci.yml
engine/: __init__.py  field.py  patterns.py  step.py
evaluator/: __init__.py  metrics.py
specfication/: ARCHITECTURE.md  MISSION.md  ROADMAP.md
specfication/roadmap/implementation/: v0-execution-report.md  v0-github-report.md  v0-issues.md
specfication/vision/: SILT_SPEC.md
store/: __init__.py  base.py  replay.py  sqlite_store.py
tests/: test_metrics.py  test_organisms.py  test_patterns.py  test_records.py  test_replay.py  test_skeleton.py  test_step.py  test_store.py  test_viz.py
tools/: __init__.py  viz.py
world/: __init__.py  organisms.py  records.py  simulate.py
