[project]
name = "silt"
version = "0.1.0"
description = "Silt — an always-on server hosting a shared 2D artificial-life world (Life-like CA / Lenia)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]
viz = [
    "matplotlib>=3.8",  # tools/viz.py — a dev-only live viewer; not needed by core/tests/CI
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
